force-app/main/default/objects/Office__c/fields/Building_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Building_Contractor__c</fullName>
    <label>Building Contractor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>