force-app/main/default/objects/Office__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>