force-app/main/default/objects/Office__c/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <label>Project Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>