force-app/main/default/objects/Office__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>